Fix Portal landing page popup visibility.

--- a/src/Portal/Portal/wwwroot/css/site.css
+++ b/src/Portal/Portal/wwwroot/css/site.css
@@ -8,6 +8,10 @@ body {
     font-weight: 300;
 }
 
+div.dataTables_scrollBody {
+    overflow: visible !important;
+}
+
 a {
     color: #0062DC;
 }
